# github-actions-python-1

./: .gitignore  README.md  pyproject.toml
.github/workflows/: main.yml
functions/hello-world/src/: hello_world.py
functions/hello-world/tests/: test_unit_hello_world.py
